# tsproto

./: README.md  pyproject.toml
docs/: api.rst  basic_examples.rst  conf.py  index.rst  interpretation_tutorial.rst  release_notes.rst  requirements.txt
examples/: illustrative-example-frequency.ipynb  illustrative-example.ipynb
src/tsproto/: __init__.py  models.py  plots.py  tsproto.py  utils.py  windowshap.py
